added more comments for results on experiments

--- a/analyze_experiments.ipynb
+++ b/analyze_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Clarification on column names: \n",
     "\"tot_masks_trained\": Total number of masks used in training\n",
     "\n",
-    "\"num_masks\": number of the \"top-k\" masks used when evaluating\n",
+    "\"num_masks\": After MCMC, masks will have a different probability based on the amount they were accepted. This column represent the amount of the 'top-k' masks we are using on inference. (i.e for using num_masks=k masks amongst n total masks trained on, we run inference using a weighted average of k/n masks)\n",
     "\n",
     "\"dropout_probs1\": Dropout probability on layer 1\n",
     "\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5q/7b4nn19d1rj3vsg11yxvc8lw0000gn/T/ipykernel_3141/2272338392.py:9: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5q/7b4nn19d1rj3vsg11yxvc8lw0000gn/T/ipykernel_5744/2272338392.py:9: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat([df, new_df])\n"
      ]
     }
@@ -76,16 +77,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Analysis of dropout masks\n",
+    "\n",
+    "\n",
     "High dropout probabilities do have the ability of yielding stronger performance. It would seem; however, there is a caveat that there must be fewer masks (but not necessarily only one) that we train on in general. \n",
     "\n",
     "I would hypotheisize that too many independent masks trying to train on their own end up adding too much noise to weights and don't allow them to learn meaningful representations.\n",
     "\n",
-    "For this particular architecture (hidden layer size (256, 128)) it seems that 3 masks yields results that are somewhat close to a standard deep-net which uses all neurons (i.e dropout probabiltieies of [0.0, 0.0])"
+    "For this particular architecture (hidden layer size (512, 256)) it seems that 3 masks yields results that are somewhat close to a standard deep-net which uses all neurons (i.e dropout probabiltieies of [0.0, 0.0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +271,7 @@
        "3             0.7             0.4          1            10  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +282,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## top performing hyperparameters\n",
+    "\n",
+    "Dropout, of 0.7 and 0.4 is actually realtively strong in this case. See the end of experiments-deep/mask_training.ipnyb for more information  pruning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -317,136 +330,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9057</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.9065</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.9065</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.9065</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9080</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9080</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9080</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9084</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9084</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.9084</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -457,7 +340,7 @@
        "      <td>0.7</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
-       "      <td>50</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -481,19 +364,6 @@
        "      <td>32</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.7</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.9088</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.2</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
        "      <td>50</td>\n",
@@ -522,6 +392,19 @@
        "      <td>0.2</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.9088</td>\n",
+       "      <td>12</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -535,7 +418,7 @@
        "      <td>0.4</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -561,7 +444,7 @@
        "      <td>0.4</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -582,16 +465,6 @@
       ],
       "text/plain": [
        "  tot_masks_trained num_masks  test_accuracy EPOCHS BATCH_SIZE     LR  \\\n",
-       "2                 3         2         0.9057     12         32  0.001   \n",
-       "3                 3         3         0.9065     12         32  0.001   \n",
-       "3                 3         3         0.9065     12         32  0.001   \n",
-       "3                 3         3         0.9065     12         32  0.001   \n",
-       "2                 3         2         0.9080     12         32  0.001   \n",
-       "2                 3         2         0.9080     12         32  0.001   \n",
-       "2                 3         2         0.9080     12         32  0.001   \n",
-       "2                 3         2         0.9084     12         32  0.001   \n",
-       "2                 3         2         0.9084     12         32  0.001   \n",
-       "2                 3         2         0.9084     12         32  0.001   \n",
        "3                 3         3         0.9085     12         32  0.001   \n",
        "3                 3         3         0.9085     12         32  0.001   \n",
        "3                 3         3         0.9085     12         32  0.001   \n",
@@ -604,35 +477,25 @@
        "1                 1         1         0.9146     12         32  0.001   \n",
        "\n",
        "   dropout_probs1  dropout_probs2 num_groups increment_amt  \n",
-       "2             0.2             0.4          1             1  \n",
-       "3             0.4             0.2          1            50  \n",
-       "3             0.4             0.2          1            10  \n",
-       "3             0.4             0.2          1             1  \n",
-       "2             0.4             0.4          1             1  \n",
-       "2             0.4             0.4          1            50  \n",
-       "2             0.4             0.4          1            10  \n",
-       "2             0.4             0.2          1             1  \n",
-       "2             0.4             0.2          1            50  \n",
-       "2             0.4             0.2          1            10  \n",
-       "3             0.7             0.4          1            50  \n",
-       "3             0.7             0.4          1             1  \n",
        "3             0.7             0.4          1            10  \n",
-       "3             0.2             0.4          1            50  \n",
+       "3             0.7             0.4          1             1  \n",
+       "3             0.7             0.4          1            50  \n",
        "3             0.2             0.4          1            10  \n",
+       "3             0.2             0.4          1            50  \n",
        "3             0.2             0.4          1             1  \n",
-       "3             0.4             0.4          1            10  \n",
-       "3             0.4             0.4          1            50  \n",
        "3             0.4             0.4          1             1  \n",
+       "3             0.4             0.4          1            50  \n",
+       "3             0.4             0.4          1            10  \n",
        "1             0.0             0.0          1             1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['test_accuracy'] > 0.89)].sort_values(by=\"test_accuracy\").tail(20)"
+    "df.sort_values(by=\"test_accuracy\").tail(10)"
    ]
   },
   {
