--- a/experiments-deep/mask_training.ipynb
+++ b/experiments-deep/mask_training.ipynb
@@ -24,8 +24,10 @@
    "id": "288cf5a6",
    "metadata": {},
    "source": [
-    "### Fixed-Mask with bayesian inference training\n",
-    "This notebook evaluates the performance of the performance of using fixed dropout masks and evaluating a weighted average of them at inference time"
+    "### Fixed-Masks with bayesian inference for training\n",
+    "This notebook evaluates the performance of the performance of using fixed dropout masks and evaluating a weighted average of them at inference time.\n",
+    "\n",
+    "This notebook shows training and pruning for one of the better set of hyperparameters that also had higher dropout probabilities on each layer"
    ]
   },
   {
@@ -72,9 +74,9 @@
    "source": [
     "BATCH_SIZE = 32\n",
     "EPOCHS = 15\n",
-    "NUM_MASKS = 5\n",
+    "NUM_MASKS = 3\n",
     "LR = 0.001\n",
-    "dropout_probs=[0.4, 0.6]"
+    "dropout_probs=[0.7, 0.4]"
    ]
   },
   {
@@ -124,225 +126,225 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:26, 70.91it/s]\n"
+      "1875it [00:15, 123.62it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 58851.0 / 100000: 0.58851\n",
-      "Total loss: 3583.5722175836563\n"
+      "Train Accuracy: 112039.0 / 180000: 0.6224388888888889\n",
+      "Total loss: 5982.230939865112\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:25, 74.34it/s]\n"
+      "1875it [00:15, 120.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 78537.0 / 100000: 0.78537\n",
-      "Total loss: 2034.3618046939373\n"
+      "Train Accuracy: 142833.0 / 180000: 0.7935166666666666\n",
+      "Total loss: 3533.7145986557007\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:26, 71.02it/s]\n"
+      "1875it [00:14, 133.73it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 82927.0 / 100000: 0.82927\n",
-      "Total loss: 1645.286963492632\n"
+      "Train Accuracy: 150362.0 / 180000: 0.8353444444444444\n",
+      "Total loss: 2876.504527039826\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:31, 59.53it/s]\n"
+      "1875it [00:14, 133.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 84666.0 / 100000: 0.84666\n",
-      "Total loss: 1477.6174337789416\n"
+      "Train Accuracy: 153363.0 / 180000: 0.8520166666666666\n",
+      "Total loss: 2605.307093206793\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:31, 59.02it/s]\n"
+      "1875it [00:14, 128.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 85828.0 / 100000: 0.85828\n",
-      "Total loss: 1371.9244211241603\n"
+      "Train Accuracy: 155368.0 / 180000: 0.8631555555555556\n",
+      "Total loss: 2409.059836709872\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:35, 53.25it/s]\n"
+      "1875it [00:15, 119.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 86612.0 / 100000: 0.86612\n",
-      "Total loss: 1294.7676348499954\n"
+      "Train Accuracy: 156915.0 / 180000: 0.87175\n",
+      "Total loss: 2282.3711749296635\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:32, 57.19it/s]\n"
+      "1875it [00:15, 119.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 87264.0 / 100000: 0.87264\n",
-      "Total loss: 1243.6770866177976\n"
+      "Train Accuracy: 157643.0 / 180000: 0.8757944444444444\n",
+      "Total loss: 2218.7956836656667\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:32, 58.30it/s]\n"
+      "1875it [00:17, 107.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 87523.0 / 100000: 0.87523\n",
-      "Total loss: 1192.9507208913565\n"
+      "Train Accuracy: 158330.0 / 180000: 0.8796111111111111\n",
+      "Total loss: 2142.3615517392755\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:23, 78.40it/s]\n"
+      "1875it [00:17, 108.06it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 88231.0 / 100000: 0.88231\n",
-      "Total loss: 1154.3681839052588\n"
+      "Train Accuracy: 159116.0 / 180000: 0.8839777777777778\n",
+      "Total loss: 2085.7453461978585\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:23, 80.76it/s]\n"
+      "1875it [00:16, 113.67it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 88611.0 / 100000: 0.88611\n",
-      "Total loss: 1115.5614146962762\n"
+      "Train Accuracy: 159338.0 / 180000: 0.8852111111111111\n",
+      "Total loss: 2062.041484077461\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:25, 72.95it/s]\n"
+      "1875it [00:16, 115.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 88732.0 / 100000: 0.88732\n",
-      "Total loss: 1109.8045058771968\n"
+      "Train Accuracy: 159677.0 / 180000: 0.8870944444444444\n",
+      "Total loss: 2013.9672125540674\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:24, 76.44it/s]\n"
+      "1875it [00:16, 112.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 88806.0 / 100000: 0.88806\n",
-      "Total loss: 1090.1483276933432\n"
+      "Train Accuracy: 160029.0 / 180000: 0.88905\n",
+      "Total loss: 2000.577449085191\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:23, 81.03it/s]\n"
+      "1875it [00:16, 114.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 89238.0 / 100000: 0.89238\n",
-      "Total loss: 1061.869417335838\n"
+      "Train Accuracy: 160442.0 / 180000: 0.8913444444444445\n",
+      "Total loss: 1944.8180303834379\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:22, 82.37it/s]\n"
+      "1875it [00:16, 115.03it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 89488.0 / 100000: 0.89488\n",
-      "Total loss: 1040.6780602792278\n"
+      "Train Accuracy: 160569.0 / 180000: 0.89205\n",
+      "Total loss: 1957.5500510726124\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:24, 77.00it/s]"
+      "1875it [00:16, 114.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 89519.0 / 100000: 0.89519\n",
-      "Total loss: 1033.5377450855449\n"
+      "Train Accuracy: 160765.0 / 180000: 0.8931388888888889\n",
+      "Total loss: 1939.1459698001854\n"
      ]
     },
     {
@@ -354,7 +356,7 @@
     }
    ],
    "source": [
-    "NGROUPS = 3 # dividing groups to use\n",
+    "NGROUPS = 1 # dividing groups to use\n",
     "mask_groups = [list(range(i, NUM_MASKS, NGROUPS)) for i in range(NGROUPS)]  # Partition masks\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
@@ -434,9 +436,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:17, 104.36it/s]\n",
-      "1875it [00:15, 120.37it/s]\n",
-      "1875it [00:14, 128.71it/s]\n"
+      "1875it [00:08, 229.72it/s]\n",
+      "1875it [00:08, 221.45it/s]\n",
+      "1875it [00:08, 222.32it/s]\n"
      ]
     }
    ],
@@ -453,7 +455,7 @@
    "id": "c3a86dd5",
    "metadata": {},
    "source": [
-    "This gives a bit more of a non-uniform distribution"
+    "### Distribution ends up being close to uniform"
    ]
   },
   {
@@ -466,7 +468,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2153, 0.1761, 0.1937, 0.1733, 0.2416])\n"
+      "tensor([0.3328, 0.3293, 0.3379])\n"
      ]
     }
    ],
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ef6a66ca",
    "metadata": {},
    "outputs": [
@@ -485,20 +487,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([4, 0])\n",
-      "torch.Size([2])\n"
+      "tensor([2, 0, 1])\n",
+      "torch.Size([3])\n"
      ]
     }
    ],
    "source": [
-    "values, indices = torch.topk(dist, k=2)\n",
+    "values, indices = torch.topk(dist, k=3)\n",
     "print(indices)\n",
     "print(indices.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "65dc967b",
    "metadata": {},
    "outputs": [
@@ -506,17 +508,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]/Users/kunalkapur/Workspace/bayesian-ensemble/experiments-deep/../model.py:249: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "0it [00:00, ?it/s]/Users/kunalkapur/Workspace/bayesian-ensemble/experiments-deep/../model.py:251: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  keep_indices = torch.tensor(keep_indices, dtype=torch.long)\n",
-      "10000it [00:12, 793.07it/s]"
+      "10000it [00:06, 1477.21it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy with all masks: 0.9099\n",
-      "Test accuracy with top 3: 0.9023\n"
+      "Test accuracy with all masks: 0.9107\n"
      ]
     },
     {
@@ -528,7 +529,7 @@
     }
    ],
    "source": [
-    "test_correct_top_2 = 0\n",
+    "test_correct_top_3 = 0\n",
     "test_correct = 0\n",
     "model.eval()\n",
     "for idx, (x, y)  in tqdm(enumerate(test_dataloader)):\n",
@@ -540,9 +541,9 @@
     "\n",
     "    logits = mcmc.predict(x, chosen_masks=indices)\n",
     "    pred = torch.argmax(logits, dim=1)\n",
-    "    test_correct_top_2 += (pred == y).sum().item()\n",
+    "    test_correct_top_3 += (pred == y).sum().item()\n",
     "print(f\"Test accuracy with all masks: {test_correct / len(dataset2)}\")\n",
-    "print(f\"Test accuracy with top 3: {test_correct_top_2 / len(dataset2)}\")"
+    "# print(f\"Test accuracy with top 3: {test_correct_top_3 / len(dataset2)}\")"
    ]
   },
   {
@@ -550,23 +551,27 @@
    "id": "76628139",
    "metadata": {},
    "source": [
-    "####  First Layer (428 / 512) neurons taken\n",
-    "#### Second layer (166 / 256) neurons taken"
+    "# Pruning\n",
+    "\n",
+    "We can take the union of all the masks used to see what neurons were needed in inference. \n",
+    "\n",
+    "####  First Layer (338 / 512) ~66% neurons need to be used \n",
+    "#### Second layer (240 / 256) ~93% neurons need to be used\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "f7075951",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([428])"
+       "torch.Size([338])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,17 +586,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "476bd64b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([166])"
+       "torch.Size([240])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
